--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <!-- Swiper CSS -->
+  <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -35,7 +37,11 @@
       background: #fff;
     }
     .blog-post {
-      margin-bottom: 60px;
+      margin-bottom: 20px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
     .blog-post img {
       width: 100%;
@@ -71,7 +77,6 @@
     .comments-section {
       margin-top: 40px;
       padding-top: 20px;
-      border-top: 1px solid #ddd;
     }
     .comments-section h3 {
       font-size: 1.5rem;
@@ -79,14 +84,21 @@
       color: #333;
       margin-bottom: 20px;
     }
-    .comment {
+    .comments-container {
+      max-height: 400px;
+      overflow-y: auto;
+      padding-right: 10px;
       margin-bottom: 20px;
+    }
+    .comment {
+      margin-bottom: 15px;
       padding: 15px;
       background: #f9f9f9;
       border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     .comment.reply {
-      margin-left: 40px;
+      margin-left: 20px;
       background: #f1f1f1;
     }
     .comment .comment-author {
@@ -112,7 +124,7 @@
       text-decoration: underline;
     }
     .comment-form {
-      margin-top: 30px;
+      margin-top: 20px;
     }
     .comment-form .btn-primary {
       background: #7b4d11;
@@ -133,6 +145,22 @@
     .btn-getstarted:hover {
       background: #5a370d;
     }
+    /* Swiper Custom Styles */
+    .swiper {
+      width: 100%;
+      padding: 20px 0;
+    }
+    .swiper-slide {
+      display: flex;
+      justify-content: center;
+    }
+    .swiper-button-next,
+    .swiper-button-prev {
+      color: #7b4d11;
+    }
+    .swiper-pagination-bullet-active {
+      background: #7b4d11;
+    }
     @media (max-width: 768px) {
       .blog-post img {
         height: 300px;
@@ -141,7 +169,10 @@
         font-size: 1.5rem;
       }
       .comment.reply {
-        margin-left: 20px;
+        margin-left: 10px;
+      }
+      .comments-container {
+        max-height: 300px;
       }
     }
   </style>
@@ -182,8 +213,14 @@
           <h2>Environmental Insights Blog</h2>
           <p>Read our latest articles on flood prediction, water management, and environmental monitoring.</p>
         </div>
-        <div id="blog-posts">
-          <!-- Blog posts will be populated dynamically -->
+        <!-- Swiper Container -->
+        <div class="swiper" id="blog-posts">
+          <div class="swiper-wrapper">
+            <!-- Blog posts will be populated dynamically as slides -->
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-pagination"></div>
         </div>
       </div>
     </section>
@@ -241,6 +278,8 @@
   <!-- Vendor JS Files -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <!-- Swiper JS -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
@@ -282,7 +321,7 @@
         userStatus.innerHTML = '<a class="btn btn-getstarted fw-bold" href="login/login.html">Get Started</a>';
       }
 
-      // List of images in assets/img/blog_images/ (simulating 20+ images)
+      // List of images in assets/img/blog/ (simulating 20+ images)
       const blogImages = Array.from({ length: 21 }, (_, i) => `assets/img/blog/DSC_${i + 1}.JPG`);
 
       // Function to get a random image
@@ -326,6 +365,30 @@
         }
       ];
 
+      // Initialize Swiper
+      function initializeSwiper() {
+        new Swiper('#blog-posts', {
+          slidesPerView: 1,
+          spaceBetween: 20,
+          navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+          },
+          pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+          },
+          breakpoints: {
+            768: {
+              slidesPerView: 2,
+            },
+            1200: {
+              slidesPerView: 3,
+            },
+          },
+        });
+      }
+
       // Fetch Blog Posts
       async function fetchBlogPosts() {
         try {
@@ -336,63 +399,77 @@
           });
           let blogs = await response.json();
           blogs = blogs.results || blogs; // Handle pagination if API returns results
-          const blogContainer = document.getElementById('blog-posts');
+          const blogContainer = document.querySelector('#blog-posts .swiper-wrapper');
           blogContainer.innerHTML = blogs.map((blog, index) => {
             const comments = JSON.parse(localStorage.getItem(`comments_${blog.id}`) || '[]');
             const discussion = getDiscussionLevel(comments.length);
             return `
-              <div id="post-${blog.id}" class="blog-post" data-aos="fade-up" data-aos-delay="${100 + index * 100}">
-                <h2>${blog.title} <span class="${discussion.class} discussion-badge">${discussion.label}</span></h2>
-                <div class="meta">Posted by ${blog.author.username} on ${new Date(blog.created_at).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</div>
-                <img src="${getRandomImage()}" alt="${blog.title}">
-                <div class="content">${blog.content}</div>
-                <div class="comments-section" id="comments-${blog.id}">
-                  <h3>Comments</h3>
-                  <div id="comment-list-${blog.id}">
-                    <!-- Comments will be populated from localStorage -->
+              <div class="swiper-slide">
+                <div id="post-${blog.id}" class="blog-post" data-aos="fade-up" data-aos-delay="${100 + index * 100}">
+                  <h2>${blog.title} <span class="${discussion.class} discussion-badge">${discussion.label}</span></h2>
+                  <div class="meta">Posted by ${blog.author.username} on ${new Date(blog.created_at).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</div>
+                  <img src="${getRandomImage()}" alt="${blog.title}">
+                  <div class="content">${blog.content}</div>
+                  <div class="comments-section" id="comments-${blog.id}">
+                    <h3>Comments</h3>
+                    <div class="card">
+                      <div class="card-body comments-container" id="comment-list-${blog.id}">
+                        <!-- Comments will be populated from localStorage -->
+                      </div>
+                    </div>
+                    ${loggedInUser ? `
+                      <form class="comment-form" data-blog-id="${blog.id}" onsubmit="submitComment(event, ${blog.id})">
+                        <textarea class="form-control mb-3" rows="5" placeholder="Add a Comment" required></textarea>
+                        <button type="submit" class="btn btn-primary">Post Comment</button>
+                      </form>
+                    ` : '<p>Please <a href="login/login.html">log in</a> to post a comment.</p>'}
                   </div>
-                  ${loggedInUser ? `
-                    <form class="comment-form" data-blog-id="${blog.id}" onsubmit="submitComment(event, ${blog.id})">
-                      <textarea class="form-control mb-3" rows="5" placeholder="Add a Comment" required></textarea>
-                      <button type="submit" class="btn btn-primary">Post Comment</button>
-                    </form>
-                  ` : '<p>Please <a href="login/login.html">log in</a> to post a comment.</p>'}
                 </div>
               </div>
             `;
           }).join('');
 
-          // Fetch comments from localStorage for each blog
+          // Fetch comments for each blog
           blogs.forEach(blog => fetchComments(blog.id));
+
+          // Initialize Swiper after content is loaded
+          initializeSwiper();
         } catch (error) {
           console.error('Error fetching blog posts:', error);
           // Use fallback data
-          const blogContainer = document.getElementById('blog-posts');
+          const blogContainer = document.querySelector('#blog-posts .swiper-wrapper');
           blogContainer.innerHTML = fallbackBlogs.map((blog, index) => {
             const comments = JSON.parse(localStorage.getItem(`comments_${blog.id}`) || '[]');
             const discussion = getDiscussionLevel(comments.length);
             return `
-              <div id="post-${blog.id}" class="blog-post" data-aos="fade-up" data-aos-delay="${100 + index * 100}">
-                <h2>${blog.title} <span class="${discussion.class} discussion-badge">${discussion.label}</span></h2>
-                <div class="meta">Posted by ${blog.author.username} on ${new Date(blog.created_at).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</div>
-                <img src="${getRandomImage()}" alt="${blog.title}">
-                <div class="content">${blog.content}</div>
-                <div class="comments-section" id="comments-${blog.id}">
-                  <h3>Comments</h3>
-                  <div id="comment-list-${blog.id}">
-                    <!-- Comments will be populated from localStorage -->
+              <div class="swiper-slide">
+                <div id="post-${blog.id}" class="blog-post" data-aos="fade-up" data-aos-delay="${100 + index * 100}">
+                  <h2>${blog.title} <span class="${discussion.class} discussion-badge">${discussion.label}</span></h2>
+                  <div class="meta">Posted by ${blog.author.username} on ${new Date(blog.created_at).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}</div>
+                  <img src="${getRandomImage()}" alt="${blog.title}">
+                  <div class="content">${blog.content}</div>
+                  <div class="comments-section" id="comments-${blog.id}">
+                    <h3>Comments</h3>
+                    <div class="card">
+                      <div class="card-body comments-container" id="comment-list-${blog.id}">
+                        <!-- Comments will be populated from localStorage -->
+                      </div>
+                    </div>
+                    ${loggedInUser ? `
+                      <form class="comment-form" data-blog-id="${blog.id}" onsubmit="submitComment(event, ${blog.id})">
+                        <textarea class="form-control mb-3" rows="5" placeholder="Add a Comment" required></textarea>
+                        <button type="submit" class="btn btn-primary">Post Comment</button>
+                      </form>
+                    ` : '<p>Please <a href="login/login.html">log in</a> to post a comment.</p>'}
                   </div>
-                  ${loggedInUser ? `
-                    <form class="comment-form" data-blog-id="${blog.id}" onsubmit="submitComment(event, ${blog.id})">
-                      <textarea class="form-control mb-3" rows="5" placeholder="Add a Comment" required></textarea>
-                      <button type="submit" class="btn btn-primary">Post Comment</button>
-                    </form>
-                  ` : '<p>Please <a href="login/login.html">log in</a> to post a comment.</p>'}
                 </div>
               </div>
             `;
           }).join('');
           fallbackBlogs.forEach(blog => fetchComments(blog.id));
+
+          // Initialize Swiper after content is loaded
+          initializeSwiper();
         }
       }
 
